added mustache templates

--- a/views/layouts/main.mustache
+++ b/views/layouts/main.mustache
@@ -5,11 +5,19 @@
   <title>{{Title}}</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="/public/dist/index.js"></script>
+  <link rel="stylesheet" href="/public/dist/stylesheet.css"></link>
 </head>
 
-<body>
-{{{embed}}}
+<body hx-boost="true" class="dark:bg-slate-400">
+  <div class="max-w-4xl mx-auto">
+  {{> views/partials/header }}
+    <main class="p-4">
+      <h1 class="text-3xl font-extrabold mb-4 text-black dark:text-black">{{Title}}</h1>
+      {{{embed}}}
+    </main>
+  {{> views/partials/footer }}
+  </div>
 </body>
 
 </html>
