--- a/views/partials/header.mustache
+++ b/views/partials/header.mustache
@@ -1,1 +1,4 @@
-<h2>Header</h2>
+<nav class="m-2 text-xl">
+  <a class="p-2 inline-block" href="/">Home</a>
+  <a class="p-2 inline-block" href="/posts">Posts</a>
+</nav>
