--- a/views/layouts/main.mustache
+++ b/views/layouts/main.mustache
@@ -5,6 +5,7 @@
   <title>{{Title}}</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="{{Description}}">
   <script src="/public/dist/index.js"></script>
   <link rel="stylesheet" href="/public/dist/stylesheet.css"></link>
 </head>
