--- a/views/partials/header.mustache
+++ b/views/partials/header.mustache
@@ -1,4 +1,4 @@
 <nav class="m-2 text-xl">
   <a class="p-2 inline-block" href="/">Home</a>
-  <a class="p-2 inline-block" href="/posts">Posts</a>
+  <a class="p-2 inline-block" href="/posts">Job Posts</a>
 </nav>
