--- a/views/post_details.mustache
+++ b/views/post_details.mustache
@@ -1,5 +1,5 @@
 
-<article id="desc{{ID}}" class="hidden peer-checked:block p-4 w-full">
+<article id="desc{{ID}}" class="fade-in-bottom hidden peer-checked:block p-4 w-full">
     <h1>{{Title}}</h1>
 
     <p>{{{Description}}}</p>
