--- a/views/posts.mustache
+++ b/views/posts.mustache
@@ -1,4 +1,3 @@
-
 {{#Posts}}
   <div
       class="search_row group relative mb-4 rounded-md border-0 border-orange-200  bg-orange-200 text-black dark:border-slate-700 dark:bg-slate-700 dark:text-white"
@@ -100,8 +99,9 @@
           <img
             alt="loading"
             id="htmx{{ID}}"
-            class="htmx-indicator m-4 h-8"
-            src="/public/images/pacman-loader.svg"
+            class="htmx-indicator mb-24 h-12"
+            src="/public/images/bars-loader.svg"
+            height="48"
           />
         </div>
       </div>
