--- a/views/layouts/main.mustache
+++ b/views/layouts/main.mustache
@@ -6,7 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{Description}}">
-  <script src="/public/dist/index.js"></script>
+  <script src="/public/dist/index.js" defer></script>
+  <script src="//unpkg.com/alpinejs" defer></script>
   <link rel="stylesheet" href="/public/dist/stylesheet.css"></link>
 </head>
 
