added alpinejs script to website

--- a/views/partials/footer.mustache
+++ b/views/partials/footer.mustache
@@ -1,1 +1,3 @@
-<div class="h-40 m-4 mt-0 rounded-lg bg-slate-500"></div>
+<div class="h-40 m-4 mt-0 rounded-lg bg-slate-500">
+{{> views/partials/dropdown}}
+</div>
