added post higlights

--- a/views/posts.mustache
+++ b/views/posts.mustache
@@ -1,13 +1,20 @@
 {{#Posts}}
   <div
+      {{#IsPinned}}
+      class="search_row group relative mb-4 rounded-md border-0 border-pink-200 bg-pink-100 dark:border-prussian-blue-900 dark:bg-black dark:text-white"
+      {{/IsPinned}}
+      {{^IsPinned}}
       class="search_row group relative mb-4 rounded-md border-0 border-orange-200  bg-orange-200 text-black dark:border-slate-700 dark:bg-slate-700 dark:text-white"
+      {{/IsPinned}}
       onclick="utils.toggleOpenState('cbx{{ID}}', 'desc{{ID}}')"
     >
-      {{! <img
+      {{#IsPinned}}
+      <img
         alt="pin"
-        src={PATH_TO_PIN_CIRCLE}
+        src="/public/images/pin.svg"
         class="absolute right-[-8px] top-[-8px] h-6 w-6 text-red-400"
-      /> }}
+      />
+      {{/IsPinned}}
       <div class="cursor-pointer">
         <div class="flex h-32 items-center space-x-2 px-4">
             {{#Thumbnail}}
