--- a/views/partials/footer.mustache
+++ b/views/partials/footer.mustache
@@ -1,3 +1,3 @@
-<div class="h-40 m-4 mt-0 rounded-lg bg-slate-500">
+<div class="h-60 m-4 p-8 mt-0 rounded-lg bg-orange-300 dark:bg-slate-500">
 {{> views/partials/dropdown}}
 </div>
