limit description width

--- a/views/posts.mustache
+++ b/views/posts.mustache
@@ -42,7 +42,7 @@
         {{CompanyName}}
       </p>
 
-      <p class="text-black line-clamp-1 font-bold md:line-clamp-2">{{Title}}</p>
+      <p class="text-black line-clamp-1 font-bold md:line-clamp-2 max-w-80">{{Title}}</p>
       <p class="text-black">{{Location}}</p>
 
       {{! <p>
