installed slim-select and alpine-js

--- a/styles/_styles.css
+++ b/styles/_styles.css
@@ -1,6 +1,8 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+@import "../node_modules/slim-select/dist/slimselect.css";
+@import "./external.css";
 
 /* 
 @font-face {
