--- a/views/layouts/main.mustache
+++ b/views/layouts/main.mustache
@@ -7,8 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{Description}}">
   <script src="/public/dist/index.js" defer></script>
-  <script src="https://unpkg.com/alpinejs" crossorigin="anonymous" defer></script>
   <link rel="stylesheet" href="/public/dist/stylesheet.css"></link>
+  <style>
+    .hide { display: none; }
+  </style>
 </head>
 
 <body hx-boost="true" class="max-w-4xl mx-auto dark:bg-slate-400">
