added tag select dropdown

--- a/views/partials/dropdown.mustache
+++ b/views/partials/dropdown.mustache
@@ -1,9 +1,10 @@
+
 <div class="flex justify-center">
     <div
         x-data="{
             open: false,
             toggle() {
-                if (this.open) { return this.close() }
+                if (this.open) {  return this.close() }
                 this.$refs.button.focus()
                 this.open = true
             },
@@ -45,16 +46,16 @@
             style="display: none;"
             class="absolute left-0 mt-2 w-40 rounded-md bg-white shadow-md"
         >
-            <a href="/posts" class="flex items-center gap-2 w-full first-of-type:rounded-t-md last-of-type:rounded-b-md px-4 py-2.5 text-left text-sm hover:bg-gray-50 disabled:text-gray-500">
-                New Task
+            <a href="/posts?tags=html" class="flex items-center gap-2 w-full first-of-type:rounded-t-md last-of-type:rounded-b-md px-4 py-2.5 text-left text-sm hover:bg-gray-50 disabled:text-gray-500">
+                HTML Jobs
             </a>
 
-            <a href="/posts" class="flex items-center gap-2 w-full first-of-type:rounded-t-md last-of-type:rounded-b-md px-4 py-2.5 text-left text-sm hover:bg-gray-50 disabled:text-gray-500">
-                Edit Task
+            <a href="/posts?tags=react" class="flex items-center gap-2 w-full first-of-type:rounded-t-md last-of-type:rounded-b-md px-4 py-2.5 text-left text-sm hover:bg-gray-50 disabled:text-gray-500">
+                React Jobs
             </a>
 
-            <a href="/posts" class="flex items-center gap-2 w-full first-of-type:rounded-t-md last-of-type:rounded-b-md px-4 py-2.5 text-left text-sm hover:bg-gray-50 disabled:text-gray-500">
-                <span class="text-red-600">Delete Task</span>
+            <a href="/posts?tags=golang" class="flex items-center gap-2 w-full first-of-type:rounded-t-md last-of-type:rounded-b-md px-4 py-2.5 text-left text-sm hover:bg-gray-50 disabled:text-gray-500">
+                <span class="text-red-600">Golang Jobs</span>
             </a>
         </div>
     </div>
