--- a/views/index.mustache
+++ b/views/index.mustache
@@ -1,6 +1,6 @@
 <section>
   <div class="mx-auto max-w-screen-xl px-4 py-4 sm:px-6 lg:px-8 lg:py-16">
-    <h2 class="text-center text-4xl font-bold tracking-tight text-gray-900 dark:text-blue-900 sm:text-5xl">
+    <h2 class="text-center text-4xl font-bold tracking-tight text-gray-900 dark:text-white sm:text-5xl">
       Read trusted reviews from our customers
     </h2>
 
