--- a/views/layouts/main.mustache
+++ b/views/layouts/main.mustache
@@ -4,7 +4,7 @@
 <head>
   <title>{{Title}}</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{Description}}">
   <script src="/public/dist/index.js" defer></script>
   <link rel="stylesheet" href="/public/dist/stylesheet.css"></link>
@@ -13,9 +13,9 @@
   </style>
 </head>
 
-<body hx-boost="true" class="max-w-4xl mx-auto dark:bg-slate-400">
+<body hx-boost="true" class="max-w-4xl mx-auto dark:bg-slate-600">
 {{> views/partials/header }}
-  <main class="p-4">
+  <main class="p-2">
     <h1 class="text-3xl font-extrabold mb-4 text-black dark:text-black">{{Title}}</h1>
     {{{embed}}}
   </main>
