added server configured theme options

--- a/views/partials/header.mustache
+++ b/views/partials/header.mustache
@@ -9,19 +9,9 @@
       <label class="flex items-center">
         <span class="text-slate-900 dark:text-slate-900">theme</span>
         <select class="ml-2 dark:bg-slate-600">
-          <option class="bg-transparent" selected={"light" === currentTheme} value="light">
-            🌞
-          </option>
-          <option class="bg-transparent" selected={"dark" === currentTheme} value="dark">
-            🌘
-          </option>
-          <option
-            class="bg-transparent"
-            selected={"system" === currentTheme || !currentTheme}
-            value="system"
-          >
-            🌎
-          </option>
+        {{#ThemeOptions}}
+        <option class="bg-transparent" {{#Selected}}selected{{/Selected}} value="{{Value}}">{{Label}}</option>
+        {{/ThemeOptions}}
         </select>
       </label>
     </form>
