--- a/views/posts.mustache
+++ b/views/posts.mustache
@@ -2,7 +2,7 @@
   <select    
     aria-hidden="true"
     class="hide slim-select"
-    hx-post="/partials/posts/search"
+    hx-post="/partials/posts/search/0"
     hx-target="#post-list"
     hx-trigger="change"
     id="tags"
