--- a/views/post_list.mustache
+++ b/views/post_list.mustache
@@ -121,15 +121,14 @@
   hx-trigger="revealed"
   id="nextPageLoaderId_{{Page}}"
 >
-  <form
-    <div class="my-8 flex items-center justify-center">
-      <img
-        alt="loading"
-        class="htmx-indicator h-14"
-        src="/public/images/bars-loader.svg"
-      />
-    </div>
-  </form>
+  <div class="htmx-indicator flex flex-col gap-2 items-center justify-center">
+    <div class="animate-pulse bg-orange-50 dark:bg-slate-700 rounded-md h-36 w-full"></div>
+    <div class="animate-pulse bg-orange-50 dark:bg-slate-700 rounded-md h-36 w-full"></div>
+    <div class="animate-pulse bg-orange-50 dark:bg-slate-700 rounded-md h-36 w-full"></div>
+    <div class="animate-pulse bg-orange-50 dark:bg-slate-700 rounded-md h-36 w-full"></div>
+    <div class="animate-pulse bg-orange-50 dark:bg-slate-700 rounded-md h-36 w-full"></div>
+    <div class="animate-pulse bg-orange-50 dark:bg-slate-700 rounded-md h-36 w-full"></div>
+  </div>
 </div>
 
 
