remove animate-pulse from posts loader

--- a/views/post_list.mustache
+++ b/views/post_list.mustache
@@ -122,12 +122,12 @@
   id="nextPageLoaderId_{{Page}}"
 >
   <div class="htmx-indicator flex flex-col gap-2 items-center justify-center">
-    <div class="animate-pulse bg-orange-50 dark:bg-slate-700 rounded-md h-36 w-full"></div>
-    <div class="animate-pulse bg-orange-50 dark:bg-slate-700 rounded-md h-36 w-full"></div>
-    <div class="animate-pulse bg-orange-50 dark:bg-slate-700 rounded-md h-36 w-full"></div>
-    <div class="animate-pulse bg-orange-50 dark:bg-slate-700 rounded-md h-36 w-full"></div>
-    <div class="animate-pulse bg-orange-50 dark:bg-slate-700 rounded-md h-36 w-full"></div>
-    <div class="animate-pulse bg-orange-50 dark:bg-slate-700 rounded-md h-36 w-full"></div>
+    <div class="bg-orange-200 dark:bg-slate-800 rounded-md h-36 w-full"></div>
+    <div class="bg-orange-200 dark:bg-slate-800 rounded-md h-36 w-full"></div>
+    <div class="bg-orange-200 dark:bg-slate-800 rounded-md h-36 w-full"></div>
+    <div class="bg-orange-200 dark:bg-slate-800 rounded-md h-36 w-full"></div>
+    <div class="bg-orange-200 dark:bg-slate-800 rounded-md h-36 w-full"></div>
+    <div class="bg-orange-200 dark:bg-slate-800 rounded-md h-36 w-full"></div>
   </div>
 </div>
 
