--- a/views/index.mustache
+++ b/views/index.mustache
@@ -1,5 +1,15 @@
 <section>
-  <div class="mx-auto max-w-screen-xl px-4 py-4 sm:px-6 lg:px-8 lg:py-16">
+  <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
+
+ <dialog id="dialog" class="rounded-xl">
+  <div class="p-4 min-w-56 min-h-36 shadow-xl text-black">
+  <button class="button" autofocus>Close</button>
+  <p>This modal dialog has a groovy backdrop!</p>
+  </div>
+</dialog>
+<button class="button" id="dialog_button">Show test dialog</button>
+
+
     <h2 class="text-center text-4xl font-bold tracking-tight text-gray-900 dark:text-white sm:text-5xl">
       Read trusted reviews from our customers
     </h2>
