--- a/styles/_styles.css
+++ b/styles/_styles.css
@@ -2,6 +2,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 @import "../node_modules/slim-select/dist/slimselect.css";
+@import "./animations.css";
 @import "./dialog.css";
 @import "./external.css";
 
@@ -299,9 +300,9 @@ div.tag-select__loading-indicator {
 .search_row {
   transition: all 0.3s ease-in-out;
   article {
-    @apply prose prose-lg p-4 rounded-b-lg dark:bg-black dark:text-gray-200 md:mb-8 md:rounded-lg;
+    @apply overflow-hidden prose prose-lg p-4 rounded-b-lg dark:bg-black dark:text-gray-200 md:mb-8 md:rounded-lg;
     h1 {
-      @apply dark:text-gray-200;
+      @apply text-xl dark:text-gray-200 truncate;
     }
     & > *:first-child:is(h2, h3, h4) {
       @apply mb-6 mt-2;
