--- a/styles/_styles.css
+++ b/styles/_styles.css
@@ -320,11 +320,11 @@ div.tag-select__loading-indicator {
 }
 
 .btn-apply {
-  @apply rounded-md bg-slate-900 px-4 py-1 font-semibold text-white dark:bg-slate-400 dark:text-slate-950 transition-all hover:bg-opacity-70;
+  @apply rounded-md bg-slate-900 px-4 py-1 font-semibold text-white dark:bg-slate-400 dark:text-slate-950 transition-all hover:bg-opacity-50;
 }
 
 .btn-apply.done {
-  @apply bg-green-900 dark:bg-green-200 dark:text-green-950;
+  @apply bg-green-900 dark:bg-slate-200 dark:text-green-950;
 }
 
 .label {
